# WKTPlot

./: .gitignore  LICENSE  Makefile  README.md  ci-cd-requirements.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_and_publish.yml  manual_push_to_discord.yml  test.yml  unittest.yml  wktplot.yml
examples/: advanced_shapefile.py  basic.py  example1.py  example2.py  open_street_map.py
src/wktplot/: __init__.py  utils.py  wktplot.py
src/wktplot/common/: file_utils.py  types.py
src/wktplot/figures/: __init__.py  base.py  osm.py  standard.py
src/wktplot/mappers/: base.py  osm.py  standard.py
src/wktplot/maps/: __init__.py  base.py  osm.py  standard.py
src/wktplot/plots/: base.py  osm.py  standard.py
test/: internal_functions_tests.py  test_facing_functions.py  test_internal_functions.py  test_wkt_plot.py
tests/: test_facing_functions.py  test_internal_functions.py  test_utils_functions.py
tests/unit/: test_build.py
tests/unit/maps/: common.py  conftest.py  test_osm.py  test_standard.py
tests/unit/plots/: common.py  conftest.py  test_osm.py  test_standard.py
wktplot/: __init__.py  wkt_plot.py
