[metadata]
name = wktplot
version = attr: wktplot.__version__
author=Michael Simpson, Gerald Sornsen
author_email=mikeysimpson4@gmail.com, gerald@sornsen.io
description=Python wrapper for visualiation of well-known-text geometries.
long_description_content_type=text/markdown
url=https://github.com/FuzzFoundation/WKTPlot
platform = any
license=MIT
keywords=shapely matplotlib GeoDataframes geometries
classifiers = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Natural Language :: English
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Librarie

[options]
include_package_data = True
package_dir = 
    =src
packages = find:
python_requires = >= 3.7
test_suite = tests
zip_safe = True

[options.packages.find]
exclude = tests
where = src

[bdist_wheel]
universal = 1

[flake8]
doctests = True
exclude =
    .git,
    .eggs,
    __pycache__,
    tests/,
    build/,
    dist/,
    setup.py,
    venv/,
    .github
ignore = W605, E201, E202, E241
max-line-length = 120