[metadata]
name = wktplot
version = attr: wktplot.__version__
author = Michael Simpson, Gerald Sornsen
author_email = mikeysimpson4@gmail.com, gerald@sornsen.io
description = Well-known-text and shapely object visualiation library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FuzzFoundation/WKTPlot
platform = any
license = MIT
keywords = well-known-text, shapely, bokeh, geo-spatial, visualization
classifiers = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Natural Language :: English
    Operating System :: OS Independent
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries

[options]
include_package_data = True
package_dir = 
    =src
packages = find:
python_requires = >= 3.7
test_suite = tests
zip_safe = True
install_requires =
    bokeh >= 2.4.2
    numpy >= 1.21.5
    shapely >= 1.8.1

[options.extras_require]
test = 
    flake8 == 5.0.4
    pytest == 7.2.0
    pytest-cov == 4.0.0
    pytest-mock == 3.10.0

[options.packages.find]
exclude = tests
where = src

[bdist_wheel]
universal = 1

[flake8]
doctests = True
exclude =
    .git,
    .eggs,
    __pycache__,
    build/,
    dist/,
    setup.py,
    venv/,
    .github
ignore = W605, E201, E202, E241
max-line-length = 120
